--- a/src/app/scene/auth/update-password/update-password.component.html
+++ b/src/app/scene/auth/update-password/update-password.component.html
@@ -1,43 +1,39 @@
 <div mat-dialog-title class="card-header">
-    <h3 class="card-title" style="text-align:center;" >Update Password</h3>
-
+    <h3 class="card-title">Update Password</h3>
     <div class="card-tools">
-      <button type="button" class="btn btn-tool" data-card-widget="collapse">
-        <i class="fas fa-minus"></i>
-      </button>
-      <button type="button" class="btn btn-tool" data-card-widget="remove">
-        <i class="fas fa-times"></i>
-      </button>
+        <button type="button" class="btn btn-tool" data-card-widget="collapse">
+            <i class="fas fa-minus"></i>
+        </button>
+        <button type="button" class="btn btn-tool" data-card-widget="remove">
+            <i class="fas fa-times"></i>
+        </button>
     </div>
 </div>
-<mat-dialog-content  >
-  <div class="card-body p-0">
-    <div   style="text-align:center;">
-      <img   src="assets/succes.gif" height="200px" weight="200px">
+<mat-dialog-content>
+    <div class="card-body">
+        <div class="image-container">
+            <img src="assets/succes.gif" class="success-image" alt="Success">
+        </div>
+        <form [formGroup]="updatePasswordForm" (submit)="onSubmit()">
+            <div class="form-group">
+                <label for="password" class="form-label">Enter Password</label>
+                <input type="password" formControlName="password" class="form-control" [ngClass]="{'is-invalid': submitted && f.password.errors}" />
+                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                    <div *ngIf="f.password.errors.required">Password is required</div>
+                    <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{'is-invalid': submitted && f.confirmPassword.errors}" />
+                <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
+                    <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
+                    <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary btn-block">Update Password</button>
+            </div>
+        </form>
     </div>
-
-  <form [formGroup]="updatePasswordForm" (submit)="onSubmit()"   >  
-
-  <div  class="row px-3"> <label class="mb-1"></label>  
-    <h6 class="mb-0 text-sm">Enter Password</h6>
-    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-        <div *ngIf="f.password.errors.required">Password is required</div>
-        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>           
-  </div>  
-  </div> 
-  <div  class="row px-3"> <label class="mb-1"></label>  
-    <h6 class="mb-0 text-sm">Confirm Password</h6>
-    <input type="password" formControlName="confirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.confirmPassword.errors }" />
-    <div *ngIf="submitted && f.confirmPassword.errors" class="invalid-feedback">
-        <div *ngIf="f.confirmPassword.errors.required">Confirm Password is required</div>
-        <div *ngIf="f.confirmPassword.errors.mustMatch">Passwords must match</div>
-    </div>           
-  </div>   
-
-  <div class="row  px-3"  >  <button  class="btn btn-sm mr-1" > Update password</button>   </div> 
-     
-  </form>
-     
-  </div>
 </mat-dialog-content>
