--- a/src/app/scene/auth/check-code/check-code.component.html
+++ b/src/app/scene/auth/check-code/check-code.component.html
@@ -1,32 +1,32 @@
 <div mat-dialog-title class="card-header">
-    <h3 class="card-title" style="text-align:center;" >Code sent</h3>
-
+    <h3 class="card-title">Code Sent</h3>
     <div class="card-tools">
-      <button  type="button"  class="btn btn-tool" data-card-widget="collapse">
-        <i class="fas fa-minus "></i>
-      </button>
-      <button type="button" class="btn btn-tool" data-card-widget="remove">
-        <i class="fas fa-times"></i>
-      </button>
+        <button type="button" class="btn btn-tool" data-card-widget="collapse">
+            <i class="fas fa-minus"></i>
+        </button>
+        <button type="button" class="btn btn-tool" data-card-widget="remove">
+            <i class="fas fa-times"></i>
+        </button>
     </div>
 </div>
-<mat-dialog-content  >
-  <div class="card-body p-0">
-    <div   style="text-align:center;">
-      <img   src="assets/succes.gif" height="200px" weight="200px">
+<mat-dialog-content>
+    <div class="card-body">
+        <div class="image-container">
+            <img src="assets/succes.gif" class="success-image">
+        </div>
+        <form [formGroup]="checkForm" (submit)="onSubmit()">
+            <div class="form-group">
+                <label for="codeReset" class="form-label">Enter Code</label>
+                <input type="text" id="codeReset" formControlName="code" class="form-control" />
+            </div>
+            <div class="form-group">
+                <button id="submitReset" class="btn btn-primary btn-block">Check Code</button>
+            </div>
+        </form>
     </div>
-
-  <form [formGroup]="checkForm" (submit)="onSubmit()"   >
-          
-    <div class="row px-3"> <label class="mb-1"></label>  
-        <h6 class="mb-0 text-sm">Enter Code</h6>
-        <input type="text" id="codeReset" formControlName="code" class="form-control"  />
-                
-  </div>   
- 
-  <div class="row  px-3"  >  <button   id="submitReset" class="btn btn-sm mr-1" > Check Code</button>   </div> 
-     
-  </form>
-     
-  </div>
 </mat-dialog-content>
+
+<!--<div   style="text-align:center;">-->
+<!--      <img   src="assets/succes.gif" height="200px" weight="200px">-->
+<!--    </div>-->
+
