--- a/src/app/scene/auth/reset-password/reset-password.component.html
+++ b/src/app/scene/auth/reset-password/reset-password.component.html
@@ -1,50 +1,32 @@
-<div class="container-fluid px-10 px-md-5 px-lg-1 px-xl-5 py-4 mx-auto">
-  <div class="card card0 ">
-    <div class="row d-flex px-5 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
-
-
-      <div class="card2 card border-0 px-4 py-5">
-        <div class="row mb-4 px-3">
-          <h6 class="mb-0 mr-4 mt-2">Reset Password</h6>
+<div class="login-container">
+    <div class="card login-card">
+        <div class="login-header">
+            <img src="assets/logo.png" alt="The Billcom Company" class="logo">
+            <h2 class="company-name">The Billcom Company</h2>
         </div>
-        <div class="row px-3 mb-4">
-          <div class="row px-3 justify-content-center mt-4 mb-5 border-line"> <img src="assets/logo.png" class="image">
-          </div>
+        <div class="login-body">
+            <h4 class="login-title">Reset Password</h4>
+            <form [formGroup]="ResetForm" (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="email">Enter Your Email Address</label>
+                    <input type="text" formControlName="email" class="form-control" id="email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                    <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                        <div *ngIf="f.email.errors.required">Email is required</div>
+                        <div *ngIf="f.email.errors.pattern">Invalid Email Address</div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary btn-block" id="code">Get Code</button>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="chk1">
+                    <label class="form-check-label" for="chk1"></label>
+                    <a routerLink="/login" class="forgot-password">Login</a>
+                </div>
+                <ngx-spinner *ngIf="isLogged" bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#f8640b" type="square-jelly-box" [fullScreen]="true">
+                    <p style="color:#ffffff">Sending Code...</p>
+                </ngx-spinner>
+            </form>
         </div>
-        <form [formGroup]="ResetForm" (ngSubmit)="onSubmit()">
-          <div class="row px-3"> <label class="mb-1"></label>
-            <h6 class="mb-0 text-sm">Enter Your Email Address</h6>
-            <input type="text" formControlName="email" class="form-control" id="email"
-              [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
-            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-              <div *ngIf="f.email.errors.required">Email is required</div>
-              <div *ngIf="f.email.errors.pattern">Email is required</div>
-            </div>
-          </div>
-          <div class="row  px-3"> 
-           <div> <button class="btn btn-sm mr-1" id="code"> Get Code</button></div>
-            <div class="custom-control custom-checkbox custom-control-inline"> <input id="chk1"
-              type="checkbox" name="chk" class="custom-control-input">  </div> <a
-          routerLink="/login" class="ml-auto mb-0 text-sm">Login</a>
-          </div>
-          <ngx-spinner *ngIf="isLogged" bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#f8640b"
-            type="square-jelly-box" [fullScreen]="true">
-            <p style="color:#ffffff"> Sending Code... </p>
-          </ngx-spinner>
-        </form>
-        <div class="row mb-4 px-3"> <small class="font-weight-bold"><a class="text-danger "></a></small> </div>
-      </div>
-
-
     </div>
-    <div class="bg-orange py-3">
-      <div class="row px-3"> <small class="ml-4 ml-sm-5 mb-2">Facebook</small><small
-          class="ml-4 ml-sm-5 mb-2">Linkedin</small>
-        <div class="social-contact ml-4 ml-sm-auto"> <span class="fa fa-facebook mr-4 text-sm"></span> <span
-            class="fa fa-google-plus mr-4 text-sm"></span> <span class="fa fa-linkedin mr-4 text-sm"></span> <span
-            class="fa fa-twitter mr-4 mr-sm-5 text-sm"></span> </div>
-      </div>
-    </div>
-
-  </div>
 </div>
