--- a/src/app/scene/home/task/member-task-list/member-task-list.component.html
+++ b/src/app/scene/home/task/member-task-list/member-task-list.component.html
@@ -1,278 +1,163 @@
 <div class="content-wrapper">
-  <div *ngIf="team" class="container-fluid">
-
-
-    <div class="row">
-
-      
-      &nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;
-
-      <div class="col-lg-2 left">
-        <br>
-        <div class="card-header ">
-
-
-
-
-          <ul class="card ">
-
-            <strong class="nav-link pointerr" style="color: #f88538;"> {{team.teamName}}
-            </strong>
-
-          </ul>
-          <h6 class="mb-0 pull-center pointerr"> <a (click)="showTeam()"> &nbsp; &nbsp;&nbsp;&nbsp;
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;More Detail</a> </h6>
-          <!--- <a>Team Lead : {{team.leader}}</a>
-
-          <p class="text-muted font-size-sm">{{formatDate(team?.startDate)}} => {{formatDate(team?.duetDate)}}
-          </p>-->
-
-
-
-
-
-        </div>
-
-        <div *ngIf="showTeamDetail" class="card-header ">
-          <br>
-          <h6 class="mb-0 pull-center "> <a> Team Leader : {{team.leader}}</a> </h6>
-          <br>
-          <ul class="card ">
-            <strong class="nav-link pull-center" style="color: #f88538;"> {{project.name}}
-            </strong>
-
-          </ul>
-          <h6 class="mb-0 pull-center "> <a> Project Leader : {{project.projectLeader}}</a> </h6>
-
-
-          <!---  
-          <p class="text-muted font-size-sm">{{formatDate(team?.startDate)}} => {{formatDate(team?.duetDate)}}
-          </p>-->
-
-
-
-
-
-        </div>
-
-
-
-        <div class="card-header">
-
-
-          <h5 class="text-center" style="color: #f88538;"> Add New task</h5>
-          <br>
-
-          <ul class="card" *ngFor="let status of stateGroup ">
-
-            <strong class="nav-link pointerr" (click)="show(status.statusDescritpion)"> {{status?.statusDescritpion}}
-            </strong>
-
-          </ul>
-
-          <ul>
-
-            <strong (click)="showFormStatus()" class="nav-link pointerr pull-right" style="color: #f88538;">
-              New Status</strong>
-
-          </ul>
-
-
-          <form *ngIf="showForm" [formGroup]="statusForm" (ngSubmit)="onSubmit()">
-            <div class="input-group input-group-sm">
-              <input formControlName="status" class="form-control form-control-navbar" type="content"
-                placeholder="status" aria-label="statut">
-              <div class="input-group-append">
-
-              </div>
-            </div>
-          </form>
-
-
-
-
-
-        </div>
-
-
-
-
-
-
-      </div>
-
-
-
-
-
-
-
-
-
-      <div class="col-lg-9 right">
-
-        <br>
-        <div class="card-header ">
-          <h6 *ngIf="authService.isManager() || authService.isProjectLeader() || authService.isLeader()"
-            class="mb-0 pull-right pointerr"> <a (click)="redirectToTeam()" style="color: #f88538;"> Team</a> / Member's
-            Tasks
-          </h6>
-          <h6 *ngIf=" authService.isMember()" class="mb-0 pull-right"> <a routerLink="/member/member-home"
-              style="color: #f88538;"> Team</a> / Member's Tasks </h6>
-
-          <p class="text-muted font-size-sm">{{formatDate(team.startedDate)}} => {{formatDate(team.dueDate)}}
-          </p>
-
-          <br>
-
-
-
-
-
-
-
-        </div>
-        <br>
-
-        <div class="row" cdkDropListGroup>
-          <div class="col-12 col-lg-6 col-xl-3" *ngFor="let task of tasks  " cdkDropList [id]="task.status"
-            [cdkDropListData]="task.taskStatusDto" (cdkDropListDropped)="onTaskDrop($event)">
-            <div class="card card-border-primary">
-              <div class="card-header">
-                <div class="card-actions float-right">
-                  <div class="dropdown show">
-                    <div class="card-tools">
-
-                      <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                        <i class="fas fa-minus"></i>
-
-                      </button>
-
-
-
-                    </div>
-                  </div>
+    <div *ngIf="team" class="container-fluid">
+        <div class="row">
+            <div class="col-lg-2 left">
+                <br>
+                <div class="card-header ">
+                    <ul class="card ">
+                        <strong class="nav-link pointerr" style="color: #f88538;"> {{ team.teamName }}
+                        </strong>
+                    </ul>
+                    <h6 class="mb-0 pull-center pointerr"><a (click)="showTeam()">More Detail</a></h6>
+                    <!--- <a>Team Lead : {{team.leader}}</a>
+                    <p class="text-muted font-size-sm">{{formatDate(team?.startDate)}} => {{formatDate(team?.duetDate)}}
+                    </p>-->
                 </div>
-                <h2 class="font-weight-normal text-center" style="color: #f88538;">{{task.status}}</h2>
-              </div>
-
-              <div class="card-body p-3" *ngFor="let t of task.taskStatusDto " cdkDrag>
-
-                <div class="card mb-3 bg-light">
-                  <div class="card-body p-3">
-                    <div class="float-right mr-n2">
-                      <button type="button" class="btn btn-tool pull-right">
-                        <img (click)="t.visible =!t.visible"   src="assets/icon-point.png" height="12px" weight="25px">&nbsp;
-                        <i  (click)="deleteTask(t.id)"  class="fas fa-times"></i> 
-                        <div *ngIf="t.visible"  class="notification_dd " >
-          
-                            <li  class="success starbucks " >
-                              
-                           
-                              <div  class="notify_data">
-                
-                                <div  *ngFor="let status of stateGroup" class="title">
-                                 
-                              
-                                
-                
-                
-                                  <li  (click)="update(t.id,status.statusDescritpion )">{{status?.statusDescritpion}} </li>             
-                       
-                
-                                </div>
-                              
-                
-                              </div>
-                
-                            </li>
-                            
-                            
-                
-                        </div>
-
-                      </button>
-                     
-                    </div>
-                  
-                    <div *ngIf="t.taskPriority === 'highPriority'" class="progress" style="height: 8px;">
-                      <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 75%"
-                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div *ngIf="t.taskPriority === 'lowPriority'" class="progress" style="height: 8px;">
-                      <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%"
-                        aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <div *ngIf="t.taskPriority === 'mediumPriority'" class="progress" style="height: 8px;">
-                      <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%"
-                        aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <h5 class="strong">{{t.taskName}}</h5>
-
-                    <p>{{t.descriptionTask.substring(0,40)}}</p>
-
-
-                    <form  *ngIf="!t.visible" [formGroup]="commentForm" (ngSubmit)="addComment(t.id)">
-                      <div class="input-group input-group-sm">
-                        <input formControlName="content" class="form-control form-control-navbar" type="content"
-                          placeholder="comment" aria-label="statut">
-                        <div class="input-group-append">
-          
-                        </div>
-                      </div>
-                    </form>
+                <div *ngIf="showTeamDetail" class="card-header ">
                     <br>
-                  
-
-                    <div class="float-right mt-n1">
-
-                      <p>
-                        <span class="right badge badge-danger"> <i class="fas fa-hourglass-half"></i>
-                          {{formatDate(t?.deleveryDate)}}  </span>    &nbsp;
-                            
-
-                        <span *ngIf="authService.isManager() || authService.isProjectLeader() "> <i *ngIf="!t.visible"
-                            (click)="goToTaskDetail(t.id)" class="fa fa-eye"></i></span>
-                        <span *ngIf="authService.isLeader() || authService.isMember() "> <i  *ngIf="!t.visible"
-                            (click)="redirectToTaskMemberDetail(t.id)" class="fa fa-eye"></i></span>
-                      </p>
-
-
-
-                    </div>
-                
-
-
-
-
-
-
-
-
-
-
-
-                  </div>
-
+                    <h6 class="mb-0 pull-center "><a> Team Leader : {{ team.leader }}</a></h6>
+                    <br>
+                    <ul class="card ">
+                        <strong class="nav-link pull-center" style="color: #f88538;"> {{ project.name }}
+                        </strong>
+                    </ul>
+                    <h6 class="mb-0 pull-center "><a> Project Leader : {{ project.projectLeader }}</a></h6>
+                    <!---
+                    <p class="text-muted font-size-sm">{{formatDate(team?.startDate)}} => {{formatDate(team?.duetDate)}}
+                    </p>-->
                 </div>
-
-
-
-              </div>
-
-              <!---   <a class="btn  float-right " style="color: #fff; background-color: #f88538; padding: 1;"
-                (click)="show(task.status)">Add new</a>-->
-
+                <div class="card-header">
+                    <h5 class="text-center" style="color: #f88538;"> Add New task</h5>
+                    <br>
+                    <ul *ngFor="let status of stateGroup " class="card">
+                        <strong (click)="show(status.statusDescritpion)"
+                                class="nav-link pointerr"> {{ status?.statusDescritpion }}
+                        </strong>
+                    </ul>
+                    <ul>
+                        <strong (click)="showFormStatus()" class="nav-link pointerr pull-right" style="color: #f88538;">
+                            New Status</strong>
+                    </ul>
+                    <form (ngSubmit)="onSubmit()" *ngIf="showForm" [formGroup]="statusForm">
+                        <div class="input-group input-group-sm">
+                            <input aria-label="statut" class="form-control form-control-navbar" formControlName="status"
+                                   placeholder="status" type="content">
+                            <div class="input-group-append">
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
+            <div class="col-lg-9 right">
+                <br>
+                <div class="card-header ">
+                    <h6 *ngIf="authService.isManager() || authService.isProjectLeader() || authService.isLeader()"
+                        class="mb-0 pull-right pointerr"><a (click)="redirectToTeam()" style="color: #f88538;"> Team</a>
+                        / Member's
+                        Tasks
+                    </h6>
+                    <h6 *ngIf=" authService.isMember()" class="mb-0 pull-right"><a routerLink="/member/member-home" style="color: #f88538;"> Team</a> /Member's Tasks </h6>
+                    <p class="text-muted font-size-sm">{{ formatDate(team.startedDate) }}
+                        => {{ formatDate(team.dueDate) }}
+                    </p>
+                    <br>
+                </div>
+                <br>
+                <div cdkDropListGroup class="row">
+                    <div (cdkDropListDropped)="onTaskDrop($event)" *ngFor="let task of tasks"
+                         [cdkDropListData]="task.taskStatusDto" [id]="task.status"
+                         cdkDropList class="col-12 col-lg-6 col-xl-3">
+                        <div class="card card-border-primary">
+                            <div class="card-header">
+                                <div class="card-actions float-right">
+                                    <div class="dropdown show">
+                                        <div class="card-tools">
+                                            <button class="btn btn-tool" data-card-widget="collapse" type="button">
+                                                <i class="fas fa-minus"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <h2 class="font-weight-normal text-center"
+                                    style="color: #f88538;">{{ task.status }}</h2>
+                            </div>
+                            <div *ngFor="let t of task.taskStatusDto" cdkDrag class="card-body p-3">
+                                <div class="card mb-3 bg-light">
+                                    <div class="card-body p-3">
+                                        <div class="float-right mr-n2">
+                                            <button class="btn btn-tool pull-right" type="button">
+                                                <img (click)="t.visible =!t.visible" height="12px"
+                                                     src="assets/icon-point.png" weight="25px">&nbsp;
+                                                <i (click)="deleteTask(t.id)" class="fas fa-times"></i>
+                                                <div *ngIf="t.visible" class="notification_dd ">
+                                                    <li class="success starbucks ">
+                                                        <div class="notify_data">
+                                                            <div *ngFor="let status of stateGroup" class="title">
+                                                                <li (click)="update(t.id,status.statusDescritpion )">{{ status?.statusDescritpion }}</li>
+                                                            </div>
+                                                        </div>
+                                                    </li>
+                                                </div>
+                                            </button>
+                                        </div>
+                                        <div *ngIf="t.taskPriority === 'highPriority'" class="progress"
+                                             style="height: 8px;">
+                                            <div aria-valuemax="100" aria-valuemin="0"
+                                                 aria-valuenow="100"
+                                                 class="progress-bar progress-bar-striped bg-danger" role="progressbar"
+                                                 style="width: 100%"></div>
+                                        </div>
+                                        <div *ngIf="t.taskPriority === 'mediumPriority'" class="progress"
+                                             style="height: 8px;">
+                                            <div aria-valuemax="100" aria-valuemin="0"
+                                                 aria-valuenow="75"
+                                                 class="progress-bar progress-bar-striped bg-warning" role="progressbar"
+                                                 style="width: 75%"></div>
+                                        </div>
+                                        <div *ngIf="t.taskPriority === 'lowPriority'" class="progress"
+                                             style="height: 8px;">
+                                            <div aria-valuemax="100" aria-valuemin="0"
+                                                 aria-valuenow="50"
+                                                 class="progress-bar progress-bar-striped bg-info" role="progressbar"
+                                                 style="width: 50%"></div>
+                                        </div>
+                                        <h5 class="strong">{{ t.taskName }}</h5>
+                                        <p>{{ t.descriptionTask.substring(0, 40) }}</p>
+                                        <form (ngSubmit)="addComment(t.id)" *ngIf="!t.visible"
+                                              [formGroup]="commentForm">
+                                            <div class="input-group input-group-sm">
+                                                <input aria-label="statut"
+                                                       class="form-control form-control-navbar"
+                                                       formControlName="content"
+                                                       placeholder="comment" type="content">
+                                                <div class="input-group-append">
 
-          </div>
-
+                                                </div>
+                                            </div>
+                                        </form>
+                                        <br>
+                                        <div class="float-right mt-n1">
+                                            <p>
+                        <span class="right badge badge-danger"> <i class="fas fa-hourglass-half"></i>
+                            {{ formatDate(t?.deleveryDate) }}  </span> &nbsp;
+                                                <span *ngIf="authService.isManager() || authService.isProjectLeader() "> <i
+                                                        (click)="goToTaskDetail(t.id)"
+                                                        *ngIf="!t.visible" class="fa fa-eye"></i></span>
+                                                <span *ngIf="authService.isLeader() || authService.isMember() "> <i
+                                                        (click)="redirectToTaskMemberDetail(t.id)"
+                                                        *ngIf="!t.visible"
+                                                        class="fa fa-eye"></i></span>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a class="btn  float-right " style="color: #fff; background-color: #f88538; padding: 1;"
+                              (click)="show(task.status)">Add new</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-
     </div>
-  </div>
 </div>
